apps/frigate/templates/webrtc-routes.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: frigate-webrtc-tcp
  namespace: frigate
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: gateway-system
      sectionName: webrtc-tcp
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: frigate
          port: 8555
          weight: 1
